# data-validation-demo-haskell

./: .ghci  .gitignore  .travis.yml  README.md  data-validation-demo-haskell.cabal  data-validation-demo.cabal  package.yaml
src/: BookingRequest.hs  Date.hs  OptionWinner.hs  ResultWinner.hs  Seats.hs
test/: BookingRequestSpec.hs  OptionWinnerSpec.hs  ResultWinnerSpec.hs  SeatsSpec.hs
